--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gulp-gzip": "^1.4.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^3.0.0"
+    "gulp-sourcemaps": "^3.0.0",
+    "y18n": "^4.0.3"
   },
   "dependencies": {},
   "scripts": {
